# harnessit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
corpus/: CHANGELOG.md  README.md
corpus/index/: arista_eos_roce.md  ibta_rocev2_annex.md  nvidia_cumulus_roce.md
docker/langfuse-selfhost/: .env.example  README.md  docker-compose.yml
docs/: HarnessIT_Architecture_v0.4.docx  HarnessIT_Architecture_v0.5.md  HarnessIT_Architecture_v0.6.md  HarnessIT_BuildPlan_v0.2.docx  HarnessIT_BuildPlan_v0.3.md  HarnessIT_BuildPlan_v0.4.md  STAGE0_CHECKLIST.md  arch.txt  build.txt  corpus_seed_list.md  v0.3_updates.md  v0.5_updates.md  v0.6_combined_updates.md
scripts/: calibrate_v03_criteria.py  microburst_recon.py  task8_verify.py
src/harnessit/: __init__.py  __main__.py  config.py  model.py  substrate.py  tools.py  tracing.py
tests/: conftest.py  test_config.py  test_eval_correctness.py  test_eval_judge.py  test_eval_runner.py  test_eval_scoring.py  test_eval_structured_commitment.py  test_model.py  test_scenarios_microburst.py  test_scenarios_silent_drops.py  test_skills.py  test_substrate.py  test_tools.py  test_tracing.py  test_viewer_client.py  test_viewer_render.py  test_viewer_transform.py
viewer/examples/: README.md  asymmetric-path-4tool.html  asymmetric-path-skill-v02.html  asymmetric-path-skill.html  hash-polarization-128flows.html  hash-polarization-skill-v02.html  hash-polarization-skill.html  microburst-4tool.html  microburst-skill-v02.html  microburst-skill.html  microburst-symptom-only.html  microburst-with-topology-tool.html  (+7 more)
(+20 files in other folders)
